// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserComments  /> it renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserComments
    comments={
      Array [
        Object {
          "articleId": "ID",
          "authorName": "authorName",
          "body": "This is a commment!",
          "id": "ID",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="c-article__header"
        >
          Post a comment!
        </h2>,
        <div
          className="c-header-divider"
        />,
        <div
          className="c-user-comments__info"
        >
          <h3
            className="c-user-comments__login-message"
          >
            Welcome, User Name
          </h3>
          <a
            className="c-user-comments__login-btn"
            href="/auth/logout"
          >
            Logout
          </a>
        </div>,
        <CommentForm />,
        <h4
          className="c-user-comments__counter"
        >
          <Plural
            className={null}
            count={1}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />
        </h4>,
        Array [
          <Comment
            comment={
              Object {
                "articleId": "ID",
                "authorName": "authorName",
                "body": "This is a commment!",
                "id": "ID",
              }
            }
          />,
        ],
      ],
      "className": "c-user-comments",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Post a comment!",
          "className": "c-article__header",
        },
        "ref": null,
        "rendered": "Post a comment!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "c-header-divider",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="c-user-comments__login-message"
            >
              Welcome, User Name
            </h3>,
            <a
              className="c-user-comments__login-btn"
              href="/auth/logout"
            >
              Logout
            </a>,
          ],
          "className": "c-user-comments__info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome, User Name",
              "className": "c-user-comments__login-message",
            },
            "ref": null,
            "rendered": "Welcome, User Name",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Logout",
              "className": "c-user-comments__login-btn",
              "href": "/auth/logout",
            },
            "ref": null,
            "rendered": "Logout",
            "type": "a",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Plural
            className={null}
            count={1}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />,
          "className": "c-user-comments__counter",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": null,
            "count": 1,
            "plural": "comments",
            "showCount": true,
            "singular": "comment",
            "style": Object {},
            "zero": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h4",
      },
      Object {
        "instance": null,
        "key": "ID",
        "nodeType": "class",
        "props": Object {
          "comment": Object {
            "articleId": "ID",
            "authorName": "authorName",
            "body": "This is a commment!",
            "id": "ID",
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="c-article__header"
          >
            Post a comment!
          </h2>,
          <div
            className="c-header-divider"
          />,
          <div
            className="c-user-comments__info"
          >
            <h3
              className="c-user-comments__login-message"
            >
              Welcome, User Name
            </h3>
            <a
              className="c-user-comments__login-btn"
              href="/auth/logout"
            >
              Logout
            </a>
          </div>,
          <CommentForm />,
          <h4
            className="c-user-comments__counter"
          >
            <Plural
              className={null}
              count={1}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />
          </h4>,
          Array [
            <Comment
              comment={
                Object {
                  "articleId": "ID",
                  "authorName": "authorName",
                  "body": "This is a commment!",
                  "id": "ID",
                }
              }
            />,
          ],
        ],
        "className": "c-user-comments",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Post a comment!",
            "className": "c-article__header",
          },
          "ref": null,
          "rendered": "Post a comment!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "c-header-divider",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="c-user-comments__login-message"
              >
                Welcome, User Name
              </h3>,
              <a
                className="c-user-comments__login-btn"
                href="/auth/logout"
              >
                Logout
              </a>,
            ],
            "className": "c-user-comments__info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome, User Name",
                "className": "c-user-comments__login-message",
              },
              "ref": null,
              "rendered": "Welcome, User Name",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Logout",
                "className": "c-user-comments__login-btn",
                "href": "/auth/logout",
              },
              "ref": null,
              "rendered": "Logout",
              "type": "a",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Plural
              className={null}
              count={1}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />,
            "className": "c-user-comments__counter",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": null,
              "count": 1,
              "plural": "comments",
              "showCount": true,
              "singular": "comment",
              "style": Object {},
              "zero": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h4",
        },
        Object {
          "instance": null,
          "key": "ID",
          "nodeType": "class",
          "props": Object {
            "comment": Object {
              "articleId": "ID",
              "authorName": "authorName",
              "body": "This is a commment!",
              "id": "ID",
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<UserComments  /> should render correctly without a comment 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UserComments
    comments={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="c-article__header"
        >
          Post a comment!
        </h2>,
        <div
          className="c-header-divider"
        />,
        <div
          className="c-user-comments__info"
        >
          <h3
            className="c-user-comments__login-message"
          >
            Welcome, User Name
          </h3>
          <a
            className="c-user-comments__login-btn"
            href="/auth/logout"
          >
            Logout
          </a>
        </div>,
        <CommentForm />,
        <h4
          className="c-user-comments__counter"
        >
          <Plural
            className={null}
            count={0}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />
        </h4>,
        Array [],
      ],
      "className": "c-user-comments",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Post a comment!",
          "className": "c-article__header",
        },
        "ref": null,
        "rendered": "Post a comment!",
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "c-header-divider",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h3
              className="c-user-comments__login-message"
            >
              Welcome, User Name
            </h3>,
            <a
              className="c-user-comments__login-btn"
              href="/auth/logout"
            >
              Logout
            </a>,
          ],
          "className": "c-user-comments__info",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Welcome, User Name",
              "className": "c-user-comments__login-message",
            },
            "ref": null,
            "rendered": "Welcome, User Name",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Logout",
              "className": "c-user-comments__login-btn",
              "href": "/auth/logout",
            },
            "ref": null,
            "rendered": "Logout",
            "type": "a",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Plural
            className={null}
            count={0}
            plural="comments"
            showCount={true}
            singular="comment"
            style={Object {}}
            zero={null}
          />,
          "className": "c-user-comments__counter",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "className": null,
            "count": 0,
            "plural": "comments",
            "showCount": true,
            "singular": "comment",
            "style": Object {},
            "zero": null,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h4",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="c-article__header"
          >
            Post a comment!
          </h2>,
          <div
            className="c-header-divider"
          />,
          <div
            className="c-user-comments__info"
          >
            <h3
              className="c-user-comments__login-message"
            >
              Welcome, User Name
            </h3>
            <a
              className="c-user-comments__login-btn"
              href="/auth/logout"
            >
              Logout
            </a>
          </div>,
          <CommentForm />,
          <h4
            className="c-user-comments__counter"
          >
            <Plural
              className={null}
              count={0}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />
          </h4>,
          Array [],
        ],
        "className": "c-user-comments",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Post a comment!",
            "className": "c-article__header",
          },
          "ref": null,
          "rendered": "Post a comment!",
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "c-header-divider",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h3
                className="c-user-comments__login-message"
              >
                Welcome, User Name
              </h3>,
              <a
                className="c-user-comments__login-btn"
                href="/auth/logout"
              >
                Logout
              </a>,
            ],
            "className": "c-user-comments__info",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Welcome, User Name",
                "className": "c-user-comments__login-message",
              },
              "ref": null,
              "rendered": "Welcome, User Name",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Logout",
                "className": "c-user-comments__login-btn",
                "href": "/auth/logout",
              },
              "ref": null,
              "rendered": "Logout",
              "type": "a",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Plural
              className={null}
              count={0}
              plural="comments"
              showCount={true}
              singular="comment"
              style={Object {}}
              zero={null}
            />,
            "className": "c-user-comments__counter",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "className": null,
              "count": 0,
              "plural": "comments",
              "showCount": true,
              "singular": "comment",
              "style": Object {},
              "zero": null,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h4",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
